# Python-Apprentice

./: .buildinfo  .gitignore  CLAUDE.md  CNAME  Justfile  LICENSE  README.md  REVIEW.md  about.html  catchball.py  course.yml  course_outline.html  docker-compose.yaml  flappybird.py  genindex.html  getting_started.html  gs_codespaces.html  gs_ide.html  hugo.toml  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.course/: overview.md  research.md  spec.md  state.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  install-extensions.sh  jtl-setup.sh  scrape-display.sh  setup.sh
.github/workflows/: deploy-pages.yml  notify.yml
.jtl/: .gitignore  Makefile  install-ext.sh  install.sh  requirements.txt  settings-student.json  settings.json  setup.sh  syllabus-1h.yaml  syllabus-reduced.yaml  syllabus-test.yaml  syllabus.yaml
.lessons/: 02a_Meet_Tina.md  02c_Squares_and_Circles.md  Open_The_Screen.ipynb
.lessons/old/: debugger.md
.lib/: auto_turtle.py  auto_turtle_concise.py  clear_output.sh  jtl.py
_sources/: about.md.txt  getting_started.md.txt  gs_codespaces.md.txt  gs_ide.md.txt  index.rst.txt
content/: _index.md
docs/: Makefile  Python-Apprentice-Flow.md  Python-Apprentice-Highlights.md  Python-Apprentice-Review.md  Python-Apprentice-Scope.md  Python-Apprentice-Technical.md  Python-Apprentice-Voice.md  README.txt  ibb-image-audit.csv
forms/: github.html
lessons/: README.md  lessonCompletion.json
scratch/: maze.py  scratch.ipynb
site/: hugo.toml
src/: manage.py  update_repo_structure.py
(+269 files in other folders)
